center images, prevent overflows

--- a/static/css/feed.css
+++ b/static/css/feed.css
@@ -213,34 +213,25 @@ body {
 
 .post-image {
     object-fit: contain;
-    width: 85%;
-    /* height: auto; */
-    /* width:auto; */
-    max-height: 400px;
+    width: 80%;
+    height: 100%;
     display: block;
-    margin-left: 1.6em;
+    margin-left: auto;
     margin-right: auto;
     max-width: 100%;
     text-align: center;
-}
-
-.images {
-    max-width: 100%;
-    padding-left: 2em;
+    margin-bottom: 1em;
 }
 
 .post-map {
-    /* position: absolute; */
     object-fit: contain;
-    /* z-index: 999; */
-    width: 90%;
-    height: auto;
+    max-width: 100%;
+    height: 100%;
     display: block;
-    padding-top: 1em;
-    margin-bottom: 1.5em;
-    margin-left: 0.9em;
-    text-align: center;
-
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .post-location {
